Quick fix for issue with wrongly aligned buttons due to unexpected hidden inputs

--- a/components/_toolbar.scss
+++ b/components/_toolbar.scss
@@ -457,7 +457,7 @@ $pat-toolbar-z-index: 2 !default;
 		}
 
 		&.quick-functions {
-			// text-align: right;
+			justify-content: flex-end;
 			grid-area: right;
 
 			> .icon,
